examples/test/testpolicy8030.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8030
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key17: value33
      key29: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value47
      podSelector:
        matchLabels:
          key43: value16
          key24: value23
